// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fields and field should render a basic field label and value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dl
        class="row"
      >
        <dt
          aria-label="Field label"
          class="col-sm-3"
        >
          Field label
        </dt>
        <dd
          aria-label="1"
          class="col-sm-9"
        >
          1
        </dd>
      </dl>
    </div>
  </body>,
  "container": <div>
    <dl
      class="row"
    >
      <dt
        aria-label="Field label"
        class="col-sm-3"
      >
        Field label
      </dt>
      <dd
        aria-label="1"
        class="col-sm-9"
      >
        1
      </dd>
    </dl>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RelatedField should render using default id value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dt
        aria-label="Related"
        class="col-sm-3"
      >
        Related
      </dt>
      <dd
        aria-label="[object Object]"
        class="col-sm-9"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <a
              class="lh-sm"
              href="/1"
            >
              Title 1
               
              Description 1
            </a>
          </li>
          <li>
            <a
              class="lh-sm"
              href="/2"
            >
              Title 2
               
              Description 2
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </body>,
  "container": <div>
    <dt
      aria-label="Related"
      class="col-sm-3"
    >
      Related
    </dt>
    <dd
      aria-label="[object Object]"
      class="col-sm-9"
    >
      <ul
        class="list-unstyled"
      >
        <li>
          <a
            class="lh-sm"
            href="/1"
          >
            Title 1
             
            Description 1
          </a>
        </li>
        <li>
          <a
            class="lh-sm"
            href="/2"
          >
            Title 2
             
            Description 2
          </a>
        </li>
      </ul>
    </dd>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RelatedField should render using string id 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dt
        aria-label="Related"
        class="col-sm-3"
      >
        Related
      </dt>
      <dd
        aria-label="[object Object]"
        class="col-sm-9"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <a
              class="lh-sm"
              href="/3"
            >
              Title 1
               
              Description 1
            </a>
          </li>
          <li>
            <a
              class="lh-sm"
              href="/4"
            >
              Title 2
               
              Description 2
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </body>,
  "container": <div>
    <dt
      aria-label="Related"
      class="col-sm-3"
    >
      Related
    </dt>
    <dd
      aria-label="[object Object]"
      class="col-sm-9"
    >
      <ul
        class="list-unstyled"
      >
        <li>
          <a
            class="lh-sm"
            href="/3"
          >
            Title 1
             
            Description 1
          </a>
        </li>
        <li>
          <a
            class="lh-sm"
            href="/4"
          >
            Title 2
             
            Description 2
          </a>
        </li>
      </ul>
    </dd>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RelatedField should render with href as a function 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dt
        aria-label="Related"
        class="col-sm-3"
      >
        Related
      </dt>
      <dd
        aria-label="[object Object]"
        class="col-sm-9"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <a
              class="lh-sm"
              href="/items/3"
            >
              Title 1
               
              Description 1
            </a>
          </li>
          <li>
            <a
              class="lh-sm"
              href="/items/4"
            >
              Title 2
               
              Description 2
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </body>,
  "container": <div>
    <dt
      aria-label="Related"
      class="col-sm-3"
    >
      Related
    </dt>
    <dd
      aria-label="[object Object]"
      class="col-sm-9"
    >
      <ul
        class="list-unstyled"
      >
        <li>
          <a
            class="lh-sm"
            href="/items/3"
          >
            Title 1
             
            Description 1
          </a>
        </li>
        <li>
          <a
            class="lh-sm"
            href="/items/4"
          >
            Title 2
             
            Description 2
          </a>
        </li>
      </ul>
    </dd>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RelatedField should render with href as a string 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dt
        aria-label="Related"
        class="col-sm-3"
      >
        Related
      </dt>
      <dd
        aria-label="[object Object]"
        class="col-sm-9"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <a
              class="lh-sm"
              href="/items/1"
            >
              Title 1
               
              Description 1
            </a>
          </li>
          <li>
            <a
              class="lh-sm"
              href="/items/2"
            >
              Title 2
               
              Description 2
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </body>,
  "container": <div>
    <dt
      aria-label="Related"
      class="col-sm-3"
    >
      Related
    </dt>
    <dd
      aria-label="[object Object]"
      class="col-sm-9"
    >
      <ul
        class="list-unstyled"
      >
        <li>
          <a
            class="lh-sm"
            href="/items/1"
          >
            Title 1
             
            Description 1
          </a>
        </li>
        <li>
          <a
            class="lh-sm"
            href="/items/2"
          >
            Title 2
             
            Description 2
          </a>
        </li>
      </ul>
    </dd>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RelatedField should render with idField as a function 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <dt
        aria-label="Related"
        class="col-sm-3"
      >
        Related
      </dt>
      <dd
        aria-label="[object Object]"
        class="col-sm-9"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <a
              class="lh-sm"
              href="/5"
            >
              Title 1
               
              Description 1
            </a>
          </li>
          <li>
            <a
              class="lh-sm"
              href="/6"
            >
              Title 2
               
              Description 2
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </body>,
  "container": <div>
    <dt
      aria-label="Related"
      class="col-sm-3"
    >
      Related
    </dt>
    <dd
      aria-label="[object Object]"
      class="col-sm-9"
    >
      <ul
        class="list-unstyled"
      >
        <li>
          <a
            class="lh-sm"
            href="/5"
          >
            Title 1
             
            Description 1
          </a>
        </li>
        <li>
          <a
            class="lh-sm"
            href="/6"
          >
            Title 2
             
            Description 2
          </a>
        </li>
      </ul>
    </dd>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
